@@ -4,7 +4,6 @@ version = rootProject.version
 @Suppress("DSL_SCOPE_VIOLATION")
 plugins {
     id(libs.plugins.ktor.get().pluginId) version libs.versions.ktor.get()
-    id("com.google.cloud.tools.jib") version "3.3.1"
 }
 
 application {
@@ -29,21 +28,7 @@ dependencies {
 }
 
 jib {
-    container {
-        ports = listOf("8080")
-        mainClass = "org.jetbrains.research.tasktracker.ApplicationKt"
-
-        jvmFlags = listOf(
-            "-server",
-            "-Djava.awt.headless=true",
-            "-XX:+UnlockExperimentalVMOptions",
-            "-XX:+UseCGroupMemoryLimitForHeap",
-            "-XX:InitialRAMFraction=2",
-            "-XX:MinRAMFraction=2",
-            "-XX:MaxRAMFraction=2",
-            "-XX:+UseG1GC",
-            "-XX:MaxGCPauseMillis=100",
-            "-XX:+UseStringDeduplication"
-        )
+    to {
+        image = "new1"
     }
 }
